# asiatic-bow-data-dump

./: .gitignore  .prettierignore  .prettierrc  fly.toml  package.json  readFpsCsv.js
.github/workflow/: trigger_data.yml
.github/workflows/: trigger_data.yml
data/: BowMeasurementSpreadsheet.xlsx  template.json
data/arrows/: arrowData.json  combos.json  sleeves.json
data/bows/af_archery_kadash_lam/: data.json
data/bows/af_archery_qing_lam/: data.json
data/bows/af_archery_tatar_lam/: data.json
data/bows/af_archery_zhuran_lam/: data.json
data/bows/af_assyrian_lam/: data.json
data/bows/af_ming_que_ye_lam/: data.json
data/bows/af_qing_lam/: data.json
data/bows/af_si_cai_lam/: data.json
data/bows/af_yuan_jebe_lam/: data.json
data/bows/alibow_advanced_yuan_fg/: data.json
data/bows/alibow_dashao_fg/: data.json
data/bows/alibow_dunhuang_lam/: data.json
data/bows/alibow_h1_fg/: data.json
data/bows/alibow_imperial_strength_bow_fg/: data.json
data/bows/alibow_kaiyuan_fg/: data.json
data/bows/alibow_kheshig_lam/: data.json
data/bows/alibow_longbow_fg/: data.json
data/bows/alibow_ming_emperor_3_lam/: data.json
data/bows/alibow_ming_kaiyuan_lam/: data.json
data/bows/alibow_mongol_fg/: data.json
pgsql/: initialization.sql
python/: README.md  log.json  log.txt  pyproject.toml
python/calculations/: dfCurve.py  genArrowCombos.py  ingestData.py  updateData.py
python/testing/: apiTests.py
utils/: addBowCsv.js  insertJsonsToDb.js  insertToPsql.js  readBowCsv.js  readFpsCsv.js  readShaftCsv.js  readSleeveCsv.js
(+70 files in other folders)
