[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["fiona <fdshu@uwaterloo.ca>"]

[tool.poetry.dependencies]
python = "~3.8"
selenium = "^4.4.3"
scipy = "^1.9.1"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
findiff = "^0.9.2"
lmfit = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
df_curve_calcs = "calculations.dfCurve:start"
update_data = "calculations.updateData:updateData"
latest_experiment = "calculations.updateData:latestExperiment"